--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "dependencies": {
     "serialport": "*",
     "log": "*",
-    "cli-color": "*",
-    "log-node": "*"
+    "cli-color": "*"
   },
   "description": "This is a JavaScript implementation of the single wire Ibus protocol found on many BMWs and some of Mini, Land Rover, MG cars. (intended for homebrew use with the RaspberryPi, PC, etc.)",
   "main": "index.js",
